@@ -11,7 +11,7 @@ if (_score < d_points_needed # 0 && {_d_player_old_rank != 0}) exitWith {
 	player setRank (_d_player_old_rank call d_fnc_GetRankIndex2);
 	player setVariable ["d_player_old_rank", _d_player_old_rank, true];
 	player setVariable ["d_player_old_score", _score];
-	if (d_with_ranked) then {
+	if (d_with_ranked && {!d_no_ranked_weapons}) then {
 		0 spawn d_fnc_weaponcargo_ranked;
 	};
 };
@@ -26,7 +26,7 @@ if (_score < d_points_needed # 1 && {_score >= d_points_needed # 0 && {_d_player
 	player setRank (_d_player_old_rank  call d_fnc_GetRankIndex2);
 	player setVariable ["d_player_old_score", _score];
 	player setVariable ["d_player_old_rank", _d_player_old_rank, true];
-	if (d_with_ranked) then {
+	if (d_with_ranked && {!d_no_ranked_weapons}) then {
 		0 spawn d_fnc_weaponcargo_ranked;
 	};
 };
@@ -41,7 +41,7 @@ if (_score < d_points_needed # 2 && {_score >= d_points_needed # 1 && {_d_player
 	player setRank (_d_player_old_rank call d_fnc_GetRankIndex2);
 	player setVariable ["d_player_old_score", _score];
 	player setVariable ["d_player_old_rank", _d_player_old_rank, true];
-	if (d_with_ranked) then {
+	if (d_with_ranked && {!d_no_ranked_weapons}) then {
 		0 spawn d_fnc_weaponcargo_ranked;
 	};
 };
@@ -56,7 +56,7 @@ if (_score < d_points_needed # 3 && {_score >= d_points_needed # 2 && {_d_player
 	player setRank (_d_player_old_rank call d_fnc_GetRankIndex2);
 	player setVariable ["d_player_old_score", _score];
 	player setVariable ["d_player_old_rank", _d_player_old_rank, true];
-	if (d_with_ranked) then {
+	if (d_with_ranked && {!d_no_ranked_weapons}) then {
 		0 spawn d_fnc_weaponcargo_ranked;
 	};
 };
@@ -71,7 +71,7 @@ if (_score < d_points_needed # 4 && {_score >= d_points_needed # 3 && {_d_player
 	player setRank (_d_player_old_rank call d_fnc_GetRankIndex2);
 	player setVariable ["d_player_old_score", _score];
 	player setVariable ["d_player_old_rank", _d_player_old_rank, true];
-	if (d_with_ranked) then {
+	if (d_with_ranked && {!d_no_ranked_weapons}) then {
 		0 spawn d_fnc_weaponcargo_ranked;
 	};
 };
@@ -86,7 +86,7 @@ if (_score < d_points_needed # 5 && {_score >= d_points_needed # 4 && {_d_player
 	player setRank (_d_player_old_rank call d_fnc_GetRankIndex2);
 	player setVariable ["d_player_old_score", _score];
 	player setVariable ["d_player_old_rank", _d_player_old_rank, true];
-	if (d_with_ranked) then {
+	if (d_with_ranked && {!d_no_ranked_weapons}) then {
 		0 spawn d_fnc_weaponcargo_ranked;
 	};
 };
@@ -100,7 +100,7 @@ if (_score < d_points_needed # 6 && {_score >= d_points_needed # 5 && {_d_player
 	player setRank "Colonel";
 	player setVariable ["d_player_old_score", _score];
 	player setVariable ["d_player_old_rank", 6, true];
-	if (d_with_ranked) then {
+	if (d_with_ranked && {!d_no_ranked_weapons}) then {
 		0 spawn d_fnc_weaponcargo_ranked;
 	};
 };
@@ -110,7 +110,7 @@ if (_score >= d_points_needed # 6 && {_d_player_old_rank != 7}) exitWith {
 	playSound "d_fanfare";
 	player setVariable ["d_player_old_score", _score];
 	player setVariable ["d_player_old_rank", 7, true];
-	if (d_with_ranked) then {
+	if (d_with_ranked && {!d_no_ranked_weapons}) then {
 		0 spawn d_fnc_weaponcargo_ranked;
 	};
 };
