@@ -378,9 +378,9 @@ class Params {
 	
 	class d_with_ranked {
 		title = "$STR_DOM_MISSIONSTRING_1112";
-		values[] = {0,1};
+		values[] = {0,1,2};
 		default = 1;
-		texts[] = {"$STR_DOM_MISSIONSTRING_922","$STR_DOM_MISSIONSTRING_1007"};
+		texts[] = {"$STR_DOM_MISSIONSTRING_922","$STR_DOM_MISSIONSTRING_1007","$STR_DOM_MISSIONSTRING_2018"};
 	};
 	
 	class d_transf_allow {
